--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
+  "name": "food_webpage",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Aman-patel-au52/food_webpage.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Aman-patel-au52/food_webpage/issues"
+  },
+  "homepage": "https://github.com/Aman-patel-au52/food_webpage#readme",
   "dependencies": {
     "cloudinary": "^1.37.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.1.1",
+    "mongoose": "^7.1.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
