--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Aman-patel-au52/food_webpage#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
